# FromZeroToAIEngineering

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-book.yml
book/: _config.yml  _toc.yml  intro.md
book/chapters/: 00_about_this_book.md  01_environment_setup.md  02_first_notebook.ipynb  10_foundations_overview.md  20_leetcode_overview.md  30_machine_learning_overview.md  40_llms_overview.md  41_LM_deep_dive.md  42_LM_evolution_code_examples.ipynb  43_how_llms_work.ipynb  44_transformer_deep_dive.md  45_llm_figures.md  46_using_llms_in_practice.ipynb  50_ai_agents_overview.md  60_cloud_engineering_overview.md
book/chapters/leetcode/: 001_two_sum.ipynb  003_longest_substring_without_repeating_characters.ipynb  011_container_with_most_water.ipynb  014_longest_common_prefix.ipynb  015_three_sum.ipynb  017_letter_combinations_of_phone_number.ipynb  049_group_anagrams.ipynb  053_maximum_subarray.ipynb  062_unique_paths.ipynb  072_edit_distance.ipynb  1004_max_consecutive_ones_iii.ipynb  104_maximum_depth_of_binary_tree.ipynb  1133_largest_unique_number.ipynb  1143_longest_common_subsequence.ipynb  1161_maximum_level_sum_of_binary_tree.ipynb  1189_maximum_number_of_balloons.ipynb  1207_unique_number_of_occurrences.ipynb  121_best_time_to_buy_sell_stock.ipynb  1268_search_suggestions_system.ipynb  1318_minimum_flips_to_make_a_or_b_equal_to_c.ipynb  136_single_number.ipynb  1372_longest_zigzag_path_in_binary_tree.ipynb  1413_minimum_value_to_get_positive_step.ipynb  1426_counting_elements.ipynb  1431_kids_with_greatest_candies.ipynb  (+75 more)
(+17 files in other folders)
